objects/Mobile_Model_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>IF(   Services_Provide__r.Name =  &apos;General Service&apos;, $CustomMetadata.Service__mdt.General_Service.Price__c , 
IF( Services_Provide__r.Name= &apos;Display repair&apos;, $CustomMetadata.Service__mdt.Display_Repair.Price__c ,
IF( Services_Provide__r.Name= &apos;Battery issue&apos;, $CustomMetadata.Service__mdt.Battery_Issue.Price__c ,
IF( Services_Provide__r.Name=  &apos;Charging issue&apos;, $CustomMetadata.Service__mdt.Charging_Issue.Price__c ,
IF( Services_Provide__r.Name=  &apos;Software Related Issue&apos;, $CustomMetadata.Service__mdt.Software_Related_Issue.Price__c ,
IF( Services_Provide__r.Name=  &apos;Protection Service&apos;, $CustomMetadata.Service__mdt.Protection_Service.Price__c ,
IF( Services_Provide__r.Name=  &apos;Over Heating&apos;, $CustomMetadata.Service__mdt.Over_Heating.Price__c ,
IF( Services_Provide__r.Name=  &apos;Insurance&apos;, $CustomMetadata.Service__mdt.Insurance.Price__c ,140))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <label>Booking</label>
        <referenceTo>Booking__c</referenceTo>
        <relationshipLabel>Mobile Model Details</relationshipLabel>
        <relationshipName>Mobile_Model_Details1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Capacity_in_GB__c</fullName>
        <label>Capacity in GB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>64</fullName>
                </value>
                <value>
                    <fullName>128</fullName>
                </value>
                <value>
                    <fullName>256</fullName>
                </value>
                <value>
                    <fullName>512</fullName>
                </value>
                <value>
                    <fullName>1024</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hidden_Amount__c</fullName>
        <label>Hidden Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Model_Name__c</fullName>
        <label>Model Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Iphone 12</fullName>
                </value>
                <value>
                    <fullName>Iphone 12 pro</fullName>
                </value>
                <value>
                    <fullName>Iphone 12 pro max</fullName>
                </value>
                <value>
                    <fullName>Iphone 13</fullName>
                </value>
                <value>
                    <fullName>Iphone 13 pro</fullName>
                </value>
                <value>
                    <fullName>Iphone 13 pro max</fullName>
                </value>
                <value>
                    <fullName>Nokia</fullName>
                </value>
                <value>
                    <fullName>Oppo</fullName>
                </value>
                <value>
                    <fullName>Realme</fullName>
                </value>
                <value>
                    <fullName>Redmi</fullName>
                </value>
                <value>
                    <fullName>Vivo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RAM__c</fullName>
        <label>RAM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Person</label>
        <referenceTo>Service_Person__c</referenceTo>
        <relationshipLabel>Mobile Model Details</relationshipLabel>
        <relationshipName>Mobile_Model_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Services_Provide__c</fullName>
        <label>Services Provide</label>
        <referenceTo>Services_Provide__c</referenceTo>
        <relationshipLabel>Mobile Model Details</relationshipLabel>
        <relationshipName>Mobile_Model_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Not Assigned</fullName>
                    <default>true</default>
                    <label>Not Assigned</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IOS</fullName>
                </value>
                <value>
                    <fullName>Android</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Mobile Model Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Model_Name__c</columns>
        <columns>Booking__c</columns>
        <columns>Service_Person__c</columns>
        <columns>Services_Provide__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MO-{0000}</displayFormat>
        <label>Mobile Model No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile Model Details</pluralLabel>
    <recordTypes>
        <fullName>Android</fullName>
        <active>true</active>
        <label>Android</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>